[Docs] L5 Swagger Fix.
